--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "github.com/glebmachine/angular-analytics"
+    "url": "http://github.com/glebmachine/angular-analytics"
   },
   "keywords": [
     "angular",
